--- a/src/components/nav-menu-btn/NavMenuBtn.scss
+++ b/src/components/nav-menu-btn/NavMenuBtn.scss
@@ -2,7 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    position: relative;
+    position: absolute;
+    left: var(--scroll-bar-width);
+    right: 0;
+    top: 0;
+    z-index: 20;
+    width: calc(100vw - var(--scroll-bar-width));
+    // width: 100vw;
     button.responsive-nav-btn {
         padding: 0.5rem;
         background-color: transparent;
@@ -27,10 +33,6 @@
         }
     }
     .responsive-nav-list {
-        position: absolute;
-        top: 2.6rem;
-        z-index: 20;
-        width: 100vw;
         /**
          * Overflow hidden combined with max-height 100vh,
          * nav list appears to slide up and down.
